{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 31,
  "lineage": "cc76dbb7-06ec-bdc7-cc0b-89db52f900c0",
  "resources": [
    {
      "module": "module.web_server_oregon",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0418306302097dbff",
            "arn": "arn:aws:ec2:us-west-2:508140293808:instance/i-0a1a17acae7dcbc6e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1a17acae7dcbc6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-057e488a61f685bcc",
            "private_dns": "ip-10-0-4-23.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.23",
            "public_dns": "ec2-18-246-214-34.us-west-2.compute.amazonaws.com",
            "public_ip": "18.246.214.34",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02db48f17b453bc51",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caf3ecdaf5e3eff1",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08a382330c5b8e025"
            ]
          },
          "dependencies": [
            "module.web_server_oregon.aws_security_group.allow_http",
            "module.web_server_oregon.data.aws_ami.this",
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_subnet.public",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:network-interface/eni-07ad64ebaa45f7ca2",
            "id": "eni-07ad64ebaa45f7ca2",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:7b:92:a5:90:dd",
            "owner_id": "508140293808",
            "private_dns_name": "ip-10-0-4-127.us-west-2.compute.internal",
            "private_ip": "10.0.4.127",
            "private_ip_list": [
              "10.0.4.127"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.4.127"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0aeb9b60a9a53604e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0caf3ecdaf5e3eff1"
          },
          "dependencies": [
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_subnet.public",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:security-group/sg-08a382330c5b8e025",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08a382330c5b8e025",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "508140293808",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_oregon.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:network-acl/acl-09e46646d6fe01501",
            "default_network_acl_id": "acl-09e46646d6fe01501",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09e46646d6fe01501",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "508140293808",
            "subnet_ids": [
              "subnet-0caf3ecdaf5e3eff1",
              "subnet-0e20ee622bbabfe40"
            ],
            "tags": {
              "Name": "web_server-default"
            },
            "tags_all": {
              "Name": "web_server-default"
            },
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_oregon.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:route-table/rtb-01afe051f0c9abccf",
            "default_route_table_id": "rtb-01afe051f0c9abccf",
            "id": "rtb-01afe051f0c9abccf",
            "owner_id": "508140293808",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "web_server-default"
            },
            "tags_all": {
              "Name": "web_server-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_oregon.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:internet-gateway/igw-0f160ced593b10faf",
            "id": "igw-0f160ced593b10faf",
            "owner_id": "508140293808",
            "tags": {
              "Name": "web_server"
            },
            "tags_all": {
              "Name": "web_server"
            },
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "dependencies": [
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f160ced593b10faf",
            "id": "r-rtb-0f6e72d570ba6e4cd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6e72d570ba6e4cd",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_oregon.module.vpc.aws_internet_gateway.this",
            "module.web_server_oregon.module.vpc.aws_route_table.public",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:route-table/rtb-0f6e72d570ba6e4cd",
            "id": "rtb-0f6e72d570ba6e4cd",
            "owner_id": "508140293808",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web_server-public"
            },
            "tags_all": {
              "Name": "web_server-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df0a86ec86524b0c",
            "route_table_id": "rtb-0f6e72d570ba6e4cd",
            "subnet_id": "subnet-0caf3ecdaf5e3eff1"
          },
          "dependencies": [
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_route_table.public",
            "module.web_server_oregon.module.vpc.aws_subnet.public",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f719acdeb65c7d76",
            "route_table_id": "rtb-0f6e72d570ba6e4cd",
            "subnet_id": "subnet-0e20ee622bbabfe40"
          },
          "dependencies": [
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_route_table.public",
            "module.web_server_oregon.module.vpc.aws_subnet.public",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc89f245a046149f",
            "route_table_id": "rtb-0f6e72d570ba6e4cd",
            "subnet_id": "subnet-0ab6425a307c33c95"
          },
          "dependencies": [
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_route_table.public",
            "module.web_server_oregon.module.vpc.aws_subnet.public",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:subnet/subnet-0caf3ecdaf5e3eff1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0caf3ecdaf5e3eff1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508140293808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_server-public-us-west-2a"
            },
            "tags_all": {
              "Name": "web_server-public-us-west-2a"
            },
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "dependencies": [
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:subnet/subnet-0e20ee622bbabfe40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e20ee622bbabfe40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508140293808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_server-public-us-west-2b"
            },
            "tags_all": {
              "Name": "web_server-public-us-west-2b"
            },
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "dependencies": [
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:subnet/subnet-0ab6425a307c33c95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab6425a307c33c95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508140293808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_server-public-us-west-2c"
            },
            "tags_all": {
              "Name": "web_server-public-us-west-2c"
            },
            "vpc_id": "vpc-06c8219b6b469d32b"
          },
          "dependencies": [
            "module.web_server_oregon.data.aws_availability_zones.available",
            "module.web_server_oregon.module.vpc.aws_vpc.this",
            "module.web_server_oregon.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_oregon.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].oregon",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:508140293808:vpc/vpc-06c8219b6b469d32b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09e46646d6fe01501",
            "default_route_table_id": "rtb-01afe051f0c9abccf",
            "default_security_group_id": "sg-0aeb9b60a9a53604e",
            "dhcp_options_id": "dopt-0ecbfce2e61bc12ae",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06c8219b6b469d32b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01afe051f0c9abccf",
            "owner_id": "508140293808",
            "tags": {
              "Name": "web_server"
            },
            "tags_all": {
              "Name": "web_server"
            }
          }
        }
      ]
    },
    {
      "module": "module.web_server_virginia",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02457590d33d576c3",
            "arn": "arn:aws:ec2:us-east-1:508140293808:instance/i-00103dd74d4a6ec21",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00103dd74d4a6ec21",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-010a1eba3b2616b2b",
            "private_dns": "ip-10-0-4-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.150",
            "public_dns": "ec2-18-215-118-79.compute-1.amazonaws.com",
            "public_ip": "18.215.118.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06fa99e0c2cd869d2",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c434c742d4bf161",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07aeb7a6b7a0cd7d7"
            ]
          },
          "dependencies": [
            "module.web_server_virginia.aws_security_group.allow_http",
            "module.web_server_virginia.data.aws_ami.this",
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_subnet.public",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:network-interface/eni-0a85bc24e1fd22744",
            "id": "eni-0a85bc24e1fd22744",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:1a:9a:d5:25:ff",
            "owner_id": "508140293808",
            "private_dns_name": "ip-10-0-4-88.ec2.internal",
            "private_ip": "10.0.4.88",
            "private_ip_list": [
              "10.0.4.88"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.4.88"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0d4ba0a580eec273a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07c434c742d4bf161"
          },
          "dependencies": [
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_subnet.public",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:security-group/sg-07aeb7a6b7a0cd7d7",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07aeb7a6b7a0cd7d7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "508140293808",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_virginia.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:network-acl/acl-0ec39f44ba13bed6d",
            "default_network_acl_id": "acl-0ec39f44ba13bed6d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ec39f44ba13bed6d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "508140293808",
            "subnet_ids": [
              "subnet-04b07c62a26a46b86",
              "subnet-07c434c742d4bf161"
            ],
            "tags": {
              "Name": "web_server-default"
            },
            "tags_all": {
              "Name": "web_server-default"
            },
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_virginia.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:route-table/rtb-0a0549b33099087bb",
            "default_route_table_id": "rtb-0a0549b33099087bb",
            "id": "rtb-0a0549b33099087bb",
            "owner_id": "508140293808",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "web_server-default"
            },
            "tags_all": {
              "Name": "web_server-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_virginia.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:internet-gateway/igw-072f69706b27e93b3",
            "id": "igw-072f69706b27e93b3",
            "owner_id": "508140293808",
            "tags": {
              "Name": "web_server"
            },
            "tags_all": {
              "Name": "web_server"
            },
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "dependencies": [
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-072f69706b27e93b3",
            "id": "r-rtb-0b6051affb8a598d51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b6051affb8a598d5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_virginia.module.vpc.aws_internet_gateway.this",
            "module.web_server_virginia.module.vpc.aws_route_table.public",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:route-table/rtb-0b6051affb8a598d5",
            "id": "rtb-0b6051affb8a598d5",
            "owner_id": "508140293808",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "web_server-public"
            },
            "tags_all": {
              "Name": "web_server-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-081580c753a37d553",
            "route_table_id": "rtb-0b6051affb8a598d5",
            "subnet_id": "subnet-07c434c742d4bf161"
          },
          "dependencies": [
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_route_table.public",
            "module.web_server_virginia.module.vpc.aws_subnet.public",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca7764cc11eef4cb",
            "route_table_id": "rtb-0b6051affb8a598d5",
            "subnet_id": "subnet-0fa2945cbb09aeded"
          },
          "dependencies": [
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_route_table.public",
            "module.web_server_virginia.module.vpc.aws_subnet.public",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e200634606cbcdd9",
            "route_table_id": "rtb-0b6051affb8a598d5",
            "subnet_id": "subnet-04b07c62a26a46b86"
          },
          "dependencies": [
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_route_table.public",
            "module.web_server_virginia.module.vpc.aws_subnet.public",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:subnet/subnet-07c434c742d4bf161",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c434c742d4bf161",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508140293808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_server-public-us-east-1a"
            },
            "tags_all": {
              "Name": "web_server-public-us-east-1a"
            },
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "dependencies": [
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:subnet/subnet-0fa2945cbb09aeded",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa2945cbb09aeded",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508140293808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_server-public-us-east-1b"
            },
            "tags_all": {
              "Name": "web_server-public-us-east-1b"
            },
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "dependencies": [
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:subnet/subnet-04b07c62a26a46b86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b07c62a26a46b86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "508140293808",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_server-public-us-east-1c"
            },
            "tags_all": {
              "Name": "web_server-public-us-east-1c"
            },
            "vpc_id": "vpc-09ae7cb35bdcb8c7d"
          },
          "dependencies": [
            "module.web_server_virginia.data.aws_availability_zones.available",
            "module.web_server_virginia.module.vpc.aws_vpc.this",
            "module.web_server_virginia.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.web_server_virginia.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].virginia",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:508140293808:vpc/vpc-09ae7cb35bdcb8c7d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ec39f44ba13bed6d",
            "default_route_table_id": "rtb-0a0549b33099087bb",
            "default_security_group_id": "sg-0d4ba0a580eec273a",
            "dhcp_options_id": "dopt-093bfb321aaa55589",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09ae7cb35bdcb8c7d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0549b33099087bb",
            "owner_id": "508140293808",
            "tags": {
              "Name": "web_server"
            },
            "tags_all": {
              "Name": "web_server"
            }
          }
        }
      ]
    }
  ]
}